# 2025-katazuke-backend-app-ai-agent-hackathon

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  deploy.sh  local-test.sh  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/api/routers/: gemini.py  health.py  vision.py
app/models/: gemini.py  vision.py
app/services/: gemini_service.py  vision_service.py
docs/: WEB_DEPLOYMENT_NOTICE.md
